今日第一commit 收不到面试觉得要凉
苦哈哈惨兮兮……抽到了这张牌还得打下去

--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -7,8 +7,7 @@
 %%==================================================
 
 \begin{abstract}
-%  \renewcommand\thesection{\arabic{section}} %编号改成阿拉伯数字
-  \section{肠道菌群纵向模式与早产儿坏死性小肠结肠炎研究}
+  \textbf{肠道菌群纵向模式与早产儿坏死性小肠结肠炎研究}
     \begin{description}
       \item[目的] 详细内容
       \item[方法] 详细内容
@@ -16,7 +15,7 @@
       \item[结论] 详细内容 \ldots
     \end{description}
 
-  \section{儿科炎症性疾病与肠道菌群紊乱}
+  \textbf{儿科炎症性疾病与肠道菌群紊乱}
     \begin{description}
       \item[目的] 详细内容
       \item[方法] 详细内容
@@ -26,7 +25,7 @@
 \end{abstract}
 
 \begin{englishabstract}
-  \section{Patterened Intestinal Microbiota in Necrotizing Enterocolitis}
+  \textbf{Patterened Intestinal Microbiota in Necrotizing Enterocolitis}
     \begin{description}
       \item[AIM] 详细内容
       \item[METHODS] 详细内容
@@ -34,7 +33,7 @@
       \item[CONCLUSIONS] 详细内容 \ldots
     \end{description}
 
-  \section{Pediatric Enterocolitis in Association with Intestinal Microbiota}
+  \textbf{Pediatric Enterocolitis in Association with Intestinal Microbiota}
     \begin{description}
       \item[AIM] 详细内容
       \item[METHODS] 详细内容
