commit from githubdesktop 哎……
面试没有 工作没有 论文写不完 文章不会改 还能在差劲点儿咩

--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -215,7 +215,7 @@
   \subsection{统计学方法}
   \label{统计学方法}
     \begin{enumerate}
-      \item 使用单因素方差分析和Kruskal-Wallis H test检验各水平物种在各组间的分布（相对丰度）是否存在显著性差异。
+      \item 使用Kruskal-Wallis H test检验各分类水平下各物种在各组间的分布（相对丰度）是否存在显著性差异；使用Benjaminia and Hochberg法对\textit{p}值进行多重检验矫正。使用Student’s \textit{t}检验检验各分类水平下各物种在两个组之间的分布（相对丰度）是否存在显著性差异；使用Benjaminia and Hochberg法对\textit{p}值进行多重检验矫正。
       \item 使用Student’s t检验评估两组间多样性指数的差异。若p < 0.05 则表示差异有统计学意义。过$\alpha$多样性分析可以得到群落（分组或者单个样本）中物种的丰度、覆盖度和多样性等信息。
       \item 利用Wilcoxon秩和检验，对每一组中的亚组进行两两检验，在具有显著差异物种类中的所有亚种比较是否都趋同于同一分类级别。
     \end{enumerate}
@@ -259,21 +259,53 @@
   \subsection{样本及测序信息}
   入选NEC患儿4例，LOS患儿3例， 对照组患儿17例。采集其纵向粪便标本，共192个，其中NEC标本47个，LOS标本44个，对照组标本101个。其他临床资料见表\ref{tab:necdemographic}。
 
-  使用Illumina MiSeq高通量测序平台共测得 条16s rRNA基因序列，优化序列数目为7,472,400，优化碱基数目为3348,030,799，优化平均序列长度为448bp。
+  使用Illumina MiSeq高通量测序、优化后，得到7,472,400条16s rRNA基因序列，碱基数目共3348030799；优化碱基数目为3348,030,799，优化平均序列长度为448bp。
   \subsection{分类学分析}
   对于测序数据进行OTU聚类，采用RDP classifier贝叶斯算法对97\%相似水平的OTU代表序列进行分类学分析，并分别在各个分类水平（从域（domain）到属（genus））统计各样本的群落组成，比对silva数据库得出各群落数量。
     \subsubsection{门（phylum）水平}
+    在门水平，三组患儿肠道内以变形菌门（\textit{Proteobacteria}）、厚壁菌门(\textit{Firmicutes})、和放线菌门为主导（{\textit{Actinobacteria}）。变形菌门的丰度在LOS组最高（59.67\%），对照组次之（59.67\%），NEC组最低（38.53\%），三组丰度显著不同（p = 0.017）；厚壁菌门(\textit{Bacilli})丰度在组最高NEC（59.59\%），对照组次之（44.88\%），LOS组最低（39.54\%），且三组间丰度呈显著性差异（p = 0.017）；放线菌门（{\textit{Actinobacteria}）的丰度对照组最高（3.40\%），NEC组次之（1.10\%），LOS组最低（0.06\%），三组丰度组间差异显著（p = 0.001）（图\ref{fig:2phylum}）。
+      %门水平配图
+      \begin{figure}[!htp]
+        \centering
+        \includegraphics[width=15cm]{2phylum.pdf}
+        \bicaption[门水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度]
+          {门水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度。}
+          {Relative Abundance of Phylum in Intestinal Microbiota.}
+        \label{fig:2phylum}
+      \end{figure}
 
     \subsubsection{纲（class）水平}
+    在纲水平，三组患儿肠道内以$\gamma$-变形菌纲（\textit{$\gamma$-Proteobacteria}）、杆菌纲(\textit{Bacilli})、梭菌纲（\textit{Clostridia}）和放线菌纲（\textit{Actinobacteria}）为主导。$\gamma$-变形菌纲的丰度在LOS组最高（59.57\%），对照组次之（50.51\%），NEC组最低（38.06\%），三组丰度显著不同（p = 0.013）；厚壁菌门(\textit{Bacilli})丰度在组最高NEC（53.56\%），对照组次之（39.19\%），LOS组最低（32.17\%），且三组间丰度呈显著性差异（p = 0.015）；梭菌纲（\textit{Clostridia}）丰度在LOS组最高（6.54\%），NEC组次之（5.36\%），对照组最低（4.86\%），三组丰度差异在统计学上不显著（p = 0.236）；放线菌纲（\textit{Clostridia}）的丰度在对照组最高（3.40\%），在LOS和NEC丰度相似（前者0.63\%，后者1.01\%，组间差异不显著（p = 0.76）），三组间丰度差异显著（p = 0.001）（图\ref{fig:2phylum}）（图\ref{fig:2class}）。
+      %纲水平配图
+      \begin{figure}[!htp]
+        \centering
+        \includegraphics[width=15cm]{2class.pdf}
+        \bicaption[纲水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度]
+          {纲水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度。}
+          {Relative Abundance of Class in Intestinal Microbiota.}
+        \label{fig:2class}
+      \end{figure}
+
     \subsubsection{目（order）水平}
+    在目水平，三组患儿肠道内以肠杆菌目（\textit{Enterobacteriales}）、乳杆菌目（\textit{Lactobacillales}）、芽孢杆菌目（\textit{Bacillales}）、梭菌目（\textit{Clostridiales}）、假单胞菌目（\textit{Pseudomonadales}）、微球菌目\textit{Micrococcales}为主。肠杆菌目在LOS组最高（57.05\%），对照组次之（40.89\%），NEC组最低（34.87\%），三组丰度差异在统计学上显著（p = 0.011）；乳杆菌目在NEC组丰度最高，为37.94\%，在LOS和对照组丰度分别为（27.1\%）和（28.28\%），且三组间乳杆菌丰度差异不显著（p = 0.176）；芽孢杆菌目在LOS组丰度(5.08\%)显著低于NEC组（15.62\%，两组比较p = 0.05），对照组丰度为10.91\%；另外，棒状杆菌目（\textit{corynebacteriales})和黄色单胞菌目（\textit{Xanthomonadales}）为对照组所独有（丰度分别为1.62\%和0.88\%）（图\ref{fig:2order}）。
+      %目水平图
+      \begin{figure}[!htp]
+        \centering
+        \includegraphics[width=15cm]{2order.pdf}
+        \bicaption[目水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度]
+          {纲水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度。}
+          {Relative Abundance of Order in Intestinal Microbiota.}
+        \label{fig:2order}
+      \end{figure}
+
     \subsubsection{科（family）水平}
     \subsubsection{属（genus）水平}
 
   %多样性
-  \subsection{基于多样性指数分析三组患儿菌群纵向定植模式}
+  \subsection{多样性指数及纵向分析}
     \subsubsection{NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
 %      \paragraph{NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
-      基于OTU进行计算，NEC,LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:shannon}，p = 0.01）。NEC,LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:simpson}，p = 0.02）。
+      基于OTU进行计算，NEC、LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:shannon}，p = 0.01）。NEC,LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:simpson}，p = 0.02）。
       %alpha多样性图
       \begin{figure}[!htp]
         \centering
@@ -285,8 +317,7 @@
         \bicaption[NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性比较]{通过计算Shannon指数(a)和Simpson(b)指数对NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}{Exploring $\alpha$ diversity by calculation Shannon diversity index(a) and Simpson diversity index(b) among preterm infants with NEC, LOS and Control groups.}
         \label{fig:2alphadiversity}
       \end{figure}
-      \subsection{$\beta$多样性分析}
-    \subsubsection{$\beta$多样性分析菌群纵向定植模式}
+      \subsection{基于$\beta$多样性分析纵向菌群定植模式}
       使用基于weighed unifrac距离的主坐标(PCoA)进行分析发现，NEC、LOS和对照组出生后肠道菌群定植以周为单位进行变化（图\ref{fig:2ingroupweek}，(A)PC1 = 69.92\%, PC2 = 15.43\%, ANOSIM r = 0.40, p = 0.001, (B)PC1 = 78.07\%, PC2 = 8.06\%, ANOSIM r = 0.36, p = 0.001, (C)PC1 = 66.59\%, PC2 = 13.18\%, ANOSIM r = 0.40, p = 0.001 ），这与以往研究的结果一致\cite{moles2013bacterial}。
         %分组，按照周来比较pcoa图
           \begin{figure}[!htp]
@@ -298,28 +329,36 @@
             \label{fig:2ingroupweek}
           \end{figure}
 
-      三组组间比较以及任意两组比较结果表明，在出生后14天内和21天后，其微生物群定植无明显差异（图\ref{fig:2inweekgroup}(A, B, D, E)，ANOSIM (A) r = 0.02, p = 0.797, (B) r = 0.12, p = 0.079, (D) r = 0.21, p = 0.087, (E) r = 0.11, p = 0.183）；出生后14到21天即生后第三周，PC1和PC2分别占组间差异的78.18\%和9.29\%（图\ref{fig:2inweekgroup}(C)，ANOSIM r = 0.32, p = 0.001），提示菌群模式与NEC发病的可能关联。此外，NEC和对照组的对比显示出生后21到28天即出生后第四周的显著差异（图\ref{fig:necvscontrol}, ANOSIM r = 0.27, p = 0.030）；这表明在NEC病程中存在这菌群的持续失调，尽管在出生后28天后，两组间的差异不显著（ANOSIM r = 0.27, p = 0.052）。
+      三组组间比较以及任意两组比较结果表明，在出生后14天内和21天后，其微生物群定植无明显差异（图\ref{fig:2inweekgroup}(A, B, D, E)，ANOSIM (A) r = 0.02, p = 0.797, (B) r = 0.12, p = 0.079, (D) r = 0.21, p = 0.087, (E) r = 0.11, p = 0.183）；出生后14到21天即生后第三周，PC1和PC2分别占组间差异的78.18\%和9.29\%（图\ref{fig:2inweekgroup}(C)，ANOSIM r = 0.32, p = 0.001），提示菌群模式与NEC发病的可能关联。此外，NEC和对照组的对比显示出生后21到28天即出生后第四周的显著差异（图\ref{fig:2necvscontrol}, ANOSIM r = 0.27, p = 0.030）；这表明在NEC病程中存在这菌群的持续失调，尽管在出生后28天后，两组间的差异不显著（ANOSIM r = 0.27, p = 0.052）。
         %分周，按照组来比较pcoa图
           \begin{figure}[!htp]
             \centering
             \includegraphics[width=16cm]{2inweekgroup.eps}
             \bicaption[按照日龄对NEC,LOS和对照组患儿间肠道菌群模式分析]
               {使用weighed unifrac距离对三组患儿间肠道菌群模式进行PCoA分析。三组患儿在出生后0到7天菌群分布相似。但在出生后14天开始，菌群模式出现显著差异，而此时也是NEC常见的发病时间。}
-              {The PCoA of Microbiota Colonization Analysis on a Weekly Basis after Birth. The}
+              {The PCoA of Microbiota Colonization Analysis on a Weekly Basis after Birth. The colonization patterns within 14 days after birth were similar among NEC, LOS and Control groups. However, after the 14th day after birth, the diversity differed among three groups, which was the time when most NEC occurs. }
             \label{fig:2inweekgroup}
           \end{figure}
         %NEC和对照组单独比较
           \begin{figure}[!htp]
             \centering
-            \includegraphics[width=16cm]{necvscontrol.eps}
+            \includegraphics[width=16cm]{2necvscontrol.eps}
             \bicaption[NEC和对照组患儿肠道菌群模式比较]
               {使用weighed unifrac距离对NEC和对照组患儿肠道菌群模式进行PCoA分析。}
               {The PCoA of Microbiota Colonization Analysis between NEC and Control groups.}
-            \label{fig:necvscontrol}
+            \label{fig:2necvscontrol}
           \end{figure}
 
-      另外，为排除组内个体间差异对于分析结果的潜在影响，本研究对于每个NEC患儿进行单病例的微生物组成PCoA分析，并发现其各自肠道微生物定植随着出生后时间推移的显著模式（图，ANOSIM (A) r = 0.26, p = 0.01, (B) r = 1.00, p = 0.035, (C) r = 0.610, p = 0.014, (D) r = 0.09, p = 0.008）。
-      
+      另外，为排除组内个体间差异对于分析结果的潜在影响，本研究对于每个NEC患儿进行单病例的微生物组成PCoA分析，并发现其各自肠道微生物定植随着出生后时间推移的显著模式（图\ref{fig:2neccases}，ANOSIM (A) r = 0.26, p = 0.01, (B) r = 1.00, p = 0.035, (C) r = 0.610, p = 0.014, (D) r = 0.09, p = 0.008）。
+        %NEC case by cases
+          \begin{figure}[!htp]
+            \centering
+            \includegraphics[width=16cm]{2neccases.eps}
+            \bicaption[三名NEC患儿出生后菌群定植模式]
+              {使用weighed unifrac三名NEC患儿出生后菌群定植模式进行PCoA分析。(A)NEC patient No.1, (B)NEC patient No.1, (C)NEC patient No.1, (D)NEC patient No.1}
+              {The PCoA OF post-partum colonization of each NEC patient. (A)NEC patient No.1, (B)NEC patient No.1, (C)NEC patient No.1, (D)NEC patient No.1}
+            \label{fig:2neccases}
+          \end{figure}
 
 
 
