--- a/tex/projects.tex
+++ b/tex/projects.tex
@@ -8,6 +8,6 @@
 %%==================================================
 
 \begin{projects}{99}
-    \item 国家自然科学基金\quad No. 81771630）
+    \item 国家自然科学基金\quad No. 81771630
     \item 上海市科委自然科学基金（面上）项目\quad{} No.13ZR1426300
 \end{projects}
