--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -22,7 +22,7 @@
       \paragraph{入组标准}
       胎龄小于34周，出生体重不低于950g的住院患儿。
       \paragraph{排除标准}
-      1）新生儿早发型败血症，2）肝脏疾病，3）肾功能损害（Cr>88μM），4）存在先天肠道发育异常，5）需要进行大型胸部或腹部手术（男性包皮环切术或PDA结扎除外），6）预计使用肠外营养（Parental Nutrition， PN）支持供应超过50％的每日卡路里摄入量，且时间超过4天，7）静脉注射抗生素（除头孢噻肟、哌拉西他唑和甲硝唑），8）有口服抗生素史，9）有血便史，10）日龄大于五天者。
+      1）新生儿早发型败血症，2）肝脏疾病，3）肾功能损害（Cr>88μM），4）存在先天肠道发育异常，5）需要进行大型胸部或腹部手术（男性包皮环切术或动脉导管结扎除外），6）预计使用肠外营养（Parental Nutrition， PN）支持供应超过50％的每日卡路里摄入量，且时间超过4天，7）静脉注射抗生素（除头孢噻肟、哌拉西他唑和甲硝唑），8）有口服抗生素史，9）有血便史，10）日龄大于五天者。
   \subsection{诊断标准}
   关注每名患儿入院后的健康情况，评估并记录一般情况全身，腹部平片报告结果等，观察其是否发生NEC（II期和III期）或LOS。
 
@@ -268,8 +268,8 @@
       \begin{figure}[!htp]
         \centering
         \includegraphics[width=15cm]{2phylum.pdf}
-        \bicaption[门水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度]
-          {门水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度。}
+        \bicaption[门水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度]
+          {门水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度。}
           {Relative Abundance of Phylum in Intestinal Microbiota.}
         \label{fig:2phylum}
       \end{figure}
@@ -280,32 +280,41 @@
       \begin{figure}[!htp]
         \centering
         \includegraphics[width=15cm]{2class.pdf}
-        \bicaption[纲水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度]
-          {纲水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度。}
+        \bicaption[纲水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度]
+          {纲水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度。}
           {Relative Abundance of Class in Intestinal Microbiota.}
         \label{fig:2class}
       \end{figure}
 
     \subsubsection{目（order）水平}
-    在目水平，三组患儿肠道内以肠杆菌目（\textit{Enterobacteriales}）、乳杆菌目（\textit{Lactobacillales}）、芽孢杆菌目（\textit{Bacillales}）、梭菌目（\textit{Clostridiales}）、假单胞菌目（\textit{Pseudomonadales}）、微球菌目\textit{Micrococcales}为主。肠杆菌目在LOS组最高（57.05\%），对照组次之（40.89\%），NEC组最低（34.87\%），三组丰度差异在统计学上显著（p = 0.011）；乳杆菌目在NEC组丰度最高，为37.94\%，在LOS和对照组丰度分别为（27.1\%）和（28.28\%），且三组间乳杆菌丰度差异不显著（p = 0.176）；芽孢杆菌目在LOS组丰度(5.08\%)显著低于NEC组（15.62\%，两组比较p = 0.05），对照组丰度为10.91\%；另外，棒状杆菌目（\textit{corynebacteriales})和黄色单胞菌目（\textit{Xanthomonadales}）为对照组所独有（丰度分别为1.62\%和0.88\%）（图\ref{fig:2order}）。
+    在目水平，三组患儿肠道内以肠杆菌目（\textit{Enterobacteriales}）、乳杆菌目（\textit{Lactobacillales}）、芽孢杆菌目（\textit{Bacillales}）、梭菌目（\textit{Clostridiales}）、假单胞菌目（\textit{Pseudomonadales}）、微球菌目\textit{Micrococcales}为主。肠杆菌目在LOS组最高（57.05\%），对照组次之（40.89\%），NEC组最低（34.87\%），三组丰度差异在统计学上显著（p = 0.011）；乳杆菌目在NEC组丰度最高，为37.94\%，在LOS和对照组丰度分别为（27.1\%）和（28.28\%），且三组间乳杆菌丰度差异不显著（p = 0.176）；芽孢杆菌目在LOS组丰度(5.08\%)显著低于NEC组（15.62\%，两组比较p = 0.05），对照组丰度为10.91\%；另外，棒状杆菌目（\textit{corynebacteriales})和黄色单胞菌目（\textit{Xanthomonadales}）为对照组所独有（丰度分别为1.62\%和0.88\%）的菌目（图\ref{fig:2order}）。
       %目水平图
       \begin{figure}[!htp]
         \centering
         \includegraphics[width=15cm]{2order.pdf}
-        \bicaption[目水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度]
-          {纲水平上三组患儿NEC,LOS和对照组患儿菌群相对丰度。}
+        \bicaption[目水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度]
+          {纲水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度。}
           {Relative Abundance of Order in Intestinal Microbiota.}
         \label{fig:2order}
       \end{figure}
 
     \subsubsection{科（family）水平}
+    \begin{figure}[!htp]
+      \centering
+      \includegraphics[width=15cm]{2order.pdf}
+      \bicaption[目水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度]
+        {纲水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度。}
+        {Relative Abundance of Order in Intestinal Microbiota.}
+      \label{fig:2order}
+    \end{figure}
+
     \subsubsection{属（genus）水平}
 
   %多样性
   \subsection{多样性指数及纵向分析}
-    \subsubsection{NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
-%      \paragraph{NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
-      基于OTU进行计算，NEC、LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:shannon}，p = 0.01）。NEC,LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:simpson}，p = 0.02）。
+    \subsubsection{NEC, LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
+%      \paragraph{NEC, LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
+      基于OTU进行计算，NEC、LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:shannon}，p = 0.01）。NEC, LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:simpson}，p = 0.02）。
       %alpha多样性图
       \begin{figure}[!htp]
         \centering
@@ -314,7 +323,7 @@
             \hspace{4em}
           \subcaptionbox{Simpson指数\label{fig:2alphadiversity:simpson}}
             {\includegraphics[height=5.5cm]{figure/2simpson.pdf}}
-        \bicaption[NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性比较]{通过计算Shannon指数(a)和Simpson(b)指数对NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}{Exploring $\alpha$ diversity by calculation Shannon diversity index(a) and Simpson diversity index(b) among preterm infants with NEC, LOS and Control groups.}
+        \bicaption[NEC, LOS和对照组患儿件肠道菌群$\alpha$多样性比较]{通过计算Shannon指数(a)和Simpson(b)指数对NEC, LOS和对照组患儿件肠道菌群$\alpha$多样性分析}{Exploring $\alpha$ diversity by calculation Shannon diversity index(a) and Simpson diversity index(b) among preterm infants with NEC, LOS and Control groups.}
         \label{fig:2alphadiversity}
       \end{figure}
       \subsection{基于$\beta$多样性分析纵向菌群定植模式}
@@ -323,7 +332,7 @@
           \begin{figure}[!htp]
             \centering
             \includegraphics[width=15cm]{2ingroupweek.eps}
-            \bicaption[NEC,LOS和对照组组内患儿出生后肠道菌群定植模式变化]
+            \bicaption[NEC, LOS和对照组组内患儿出生后肠道菌群定植模式变化]
               {使用weighed unifrac距离对出生后肠道菌群定植进行PCoA分析}
               {Post-partum Colonization Pattern by PCoA of Weighed Unifrac Distances}
             \label{fig:2ingroupweek}
@@ -334,7 +343,7 @@
           \begin{figure}[!htp]
             \centering
             \includegraphics[width=16cm]{2inweekgroup.eps}
-            \bicaption[按照日龄对NEC,LOS和对照组患儿间肠道菌群模式分析]
+            \bicaption[按照日龄对NEC, LOS和对照组患儿间肠道菌群模式分析]
               {使用weighed unifrac距离对三组患儿间肠道菌群模式进行PCoA分析。三组患儿在出生后0到7天菌群分布相似。但在出生后14天开始，菌群模式出现显著差异，而此时也是NEC常见的发病时间。}
               {The PCoA of Microbiota Colonization Analysis on a Weekly Basis after Birth. The colonization patterns within 14 days after birth were similar among NEC, LOS and Control groups. However, after the 14th day after birth, the diversity differed among three groups, which was the time when most NEC occurs. }
             \label{fig:2inweekgroup}
