--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -287,33 +287,43 @@
       \end{figure}
 
     \subsubsection{目（order）水平}
-    在目水平，三组患儿肠道内以肠杆菌目（\textit{Enterobacteriales}）、乳杆菌目（\textit{Lactobacillales}）、芽孢杆菌目（\textit{Bacillales}）、梭菌目（\textit{Clostridiales}）、假单胞菌目（\textit{Pseudomonadales}）、微球菌目\textit{Micrococcales}为主。肠杆菌目在LOS组最高（57.05\%），对照组次之（40.89\%），NEC组最低（34.87\%），三组丰度差异在统计学上显著（p = 0.011）；乳杆菌目在NEC组丰度最高，为37.94\%，在LOS和对照组丰度分别为（27.1\%）和（28.28\%），且三组间乳杆菌丰度差异不显著（p = 0.176）；芽孢杆菌目在LOS组丰度(5.08\%)显著低于NEC组（15.62\%，两组比较p = 0.05），对照组丰度为10.91\%；另外，棒状杆菌目（\textit{corynebacteriales})和黄色单胞菌目（\textit{Xanthomonadales}）为对照组所独有（丰度分别为1.62\%和0.88\%）的菌目（图\ref{fig:2order}）。
+    在目水平，三组患儿肠道内以肠杆菌目（\textit{Enterobacteriales}）、乳杆菌目（\textit{Lactobacillales}）、芽孢杆菌目（\textit{Bacillales}）、梭菌目（\textit{Clostridiales}）、假单胞菌目（\textit{Pseudomonadales}）、微球菌目\textit{Micrococcales}为主。肠杆菌目在LOS组最高（57.05\%），对照组次之（40.89\%），NEC组最低（34.87\%），三组丰度差异在统计学上显著（p = 0.011）；乳杆菌目在NEC组丰度最高，为37.94\%，在LOS和对照组丰度分别为（27.1\%）和（28.28\%），且三组间乳杆菌丰度差异不显著（p = 0.176）；芽孢杆菌目在LOS组丰度(5.08\%)显著低于NEC组（15.62\%，两组比较p = 0.05），对照组丰度为10.91\%；梭菌目分别在三组的丰度类似：NEC组为\%5.36，LOS组为\%6.54，对照组为4.86\%；假单胞菌目在对照组的丰度（8.62\%）显著高于NEC组（3.15\%，p = 0.015）和LOS组(\%2.39，p = 0.015)。另外，棒状杆菌目（\textit{corynebacteriales})和黄色单胞菌目（\textit{Xanthomonadales}）为对照组所独有（丰度分别为1.62\%和0.88\%）的菌目（图\ref{fig:2order}）。
       %目水平图
       \begin{figure}[!htp]
         \centering
         \includegraphics[width=15cm]{2order.pdf}
         \bicaption[目水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度]
-          {纲水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度。}
+          {目水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度。}
           {Relative Abundance of Order in Intestinal Microbiota.}
         \label{fig:2order}
       \end{figure}
 
     \subsubsection{科（family）水平}
-    \begin{figure}[!htp]
-      \centering
-      \includegraphics[width=15cm]{2order.pdf}
-      \bicaption[目水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度]
-        {纲水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度。}
-        {Relative Abundance of Order in Intestinal Microbiota.}
-      \label{fig:2order}
-    \end{figure}
+    在科水平，三组患儿肠道内以肠杆菌科（\textit{Enterobacteriaceae}）、肠球菌科(\textit{Enterococcaceae})、乳杆菌目（\textit{Lactobacillales}）、链球菌科（\textit{Streptococcaceae}）、葡萄球菌科（\textit{Staphylococcaceae}）、假单胞菌科\textit{Pseudomonadaceae}占主导。肠杆菌科丰度在LOS组最高，为57.05\%，NEC组和对照组丰度分别为34.87\%和40.89\%，三组间丰度差异显著（p = 0.011）；肠球菌科在三组的丰度分别为NEC组20.86\%，LOS组18.15\%,对照组8.46\%，三组间差异不显著（p = 0.109）；LOS组链球菌科百分比（8.70\%）分别显著低于NEC组（16.67\%，p = 0.）和对照组（19.07\%p = 0.023），但三组比较差异不显著（p = 0.438）；假单胞菌在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，三组间差异显著（p = 0.039）（图\ref{fig:2family}）。
+      %科水平图
+      \begin{figure}[!htp]
+        \centering
+        \includegraphics[width=15cm]{2family.pdf}
+        \bicaption[科水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度]
+          {纲水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度。}
+          {Relative Abundance of Order in Intestinal Microbiota.}
+        \label{fig:2family}
+      \end{figure}
 
     \subsubsection{属（genus）水平}
+    （图\ref{fig:2order}）。
+      \begin{figure}[!htp]
+        \centering
+        \includegraphics[width=15cm]{2family.pdf}
+        \bicaption[属水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度]
+          {属水平上三组患儿NEC, LOS和对照组患儿菌群相对丰度。}
+          {Relative Abundance of Order in Intestinal Microbiota.}
+        \label{fig:2genus}
+      \end{figure}
 
   %多样性
   \subsection{多样性指数及纵向分析}
-    \subsubsection{NEC, LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
-%      \paragraph{NEC, LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
+    \subsubsection{NEC, LOS和对照组患儿间肠道菌群$\alpha$多样性分析}
       基于OTU进行计算，NEC、LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:shannon}，p = 0.01）。NEC, LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:simpson}，p = 0.02）。
       %alpha多样性图
       \begin{figure}[!htp]
@@ -323,7 +333,7 @@
             \hspace{4em}
           \subcaptionbox{Simpson指数\label{fig:2alphadiversity:simpson}}
             {\includegraphics[height=5.5cm]{figure/2simpson.pdf}}
-        \bicaption[NEC, LOS和对照组患儿件肠道菌群$\alpha$多样性比较]{通过计算Shannon指数(a)和Simpson(b)指数对NEC, LOS和对照组患儿件肠道菌群$\alpha$多样性分析}{Exploring $\alpha$ diversity by calculation Shannon diversity index(a) and Simpson diversity index(b) among preterm infants with NEC, LOS and Control groups.}
+        \bicaption[NEC, LOS和对照组患儿间肠道菌群$\alpha$多样性比较]{通过计算Shannon指数(a)和Simpson(b)指数对NEC, LOS和对照组患儿间肠道菌群$\alpha$多样性分析}{Exploring $\alpha$ diversity by calculation Shannon diversity index(a) and Simpson diversity index(b) among preterm infants with NEC, LOS and Control groups.}
         \label{fig:2alphadiversity}
       \end{figure}
       \subsection{基于$\beta$多样性分析纵向菌群定植模式}
