--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -13,12 +13,22 @@
 \section{引言}
 \section{材料与方法}
   \subsection{伦理}
-
+  该研究经上海市儿童医学中心伦理联合委员会批准，上海交通大学医学院（SCMCIRB-K2013022）。 在采集每名患儿的粪便样本之前，取得其监护人理解、同意并于知情同意书上签字。
   \subsection{研究对象}
+  于2017年3月至2018年6月间，上海儿童医学中心新生儿重症监护病房（NICU）的NEC、外科病房的HAEC和上海市儿童医院消化科病房的IBD患儿，
+    \subsubsection{NEC入选及排除标准}
+      \paragraph{入组标准}
+      胎龄小于34周，出生体重不低于950g的住院患儿。
+      \paragraph{排除标准}
+      1）新生儿早发型败血症，2）肝脏疾病，3）肾功能损害（Cr>88μM），4）存在先天肠道发育异常，5）需要进行大型胸部或腹部手术（男性包皮环切术或动脉导管结扎除外），6）预计使用肠外营养（Parental Nutrition， PN）支持供应超过50％的每日卡路里摄入量，且时间超过4天，7）静脉注射抗生素（除头孢噻肟、哌拉西他唑和甲硝唑），8）有口服抗生素史，9）有血便史，10）日龄大于五天者。
+    \subsection{HAEC入选及排除标准}
+      \paragraph{入选标准}
+      \paragraph{排除标准}
+    \subsection{IBD入选及排除标准}
+      \paragraph{入选标准}
+      \paragraph{排除标准}
 
   \subsection{诊断标准}
-
-
 
   \subsection{主要实验室试剂及仪器}
   参照\ref{主要实验室试剂及仪器}
