哭了真哭了
妈呀我也太脆弱了？
btw写完chap2了

--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -11,7 +11,7 @@
 \label{chap:nec}
 
 \section{引言}
-肠道菌群紊乱常常见于多种早产并发症，包括坏死性小肠结肠炎（Necrotizing Enterocolitis, NEC）和迟发性败血症（Late-Onset Sepsis）。前者是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}，在早产儿发病率为4～7\%\cite{rees2010national}；起病快，进展凶险，严重者可致死。近年来有研究发现肠道菌群紊乱存在于NEC发病期间。后者是一种在出生后72小时后发生的败血症，其是早产儿和极低出生体重的死亡主要原因之一\cite{stoll2002late}。近期，有报道LOS患儿肠道内菌群多样性下降\cite{mai2013distortions}，致病菌包括肠球菌（\textit{Enterococcus}）丰度增加\cite{stewart2017longitudinal}，提示肠道菌群紊乱与LOS发病相关。本研究拟自早产儿出生后纵向收集其粪便标本，标准化处理后进行二代测序，以探究肠道菌群定植模式发展对于NEC和LOS发病的贡献，为其预防治疗提供理论基础。
+肠道菌群紊乱常常见于多种早产并发症，包括坏死性小肠结肠炎（Necrotizing Enterocolitis, NEC）和迟发性败血症（Late-Onset Sepsis，LOS）。前者是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}，在早产儿发病率为4～7\%\cite{rees2010national}；起病快，进展凶险，严重者可致死。近年来有研究发现肠道菌群紊乱存在于NEC发病期间。后者是一种在出生后72小时后发生的败血症，其是早产儿和极低出生体重的死亡主要原因之一\cite{stoll2002late}。近期，有报道LOS患儿肠道内菌群多样性下降\cite{mai2013distortions}，致病菌包括肠球菌（\textit{Enterococcus}）丰度增加\cite{stewart2017longitudinal}，提示肠道菌群紊乱与LOS发病相关。本研究拟自早产儿出生后纵向收集其粪便标本，标准化处理后进行二代测序，以探究肠道菌群定植模式发展对于NEC和LOS发病的贡献，为其预防治疗提供理论基础。
 
 \section{材料与方法}
   \subsection{伦理}
@@ -239,7 +239,7 @@
 
   \begin{table}[!hpb]
     \centering
-    \bicaption[指向一个表格的表目录索引]
+    \bicaption[早产儿患者临床情况]
       {早产儿患者临床情况\footnotemark[1]}
       {Demographic characteristics of Preterm NEC, LOS and control groups.}
     \label{tab:necdemographic}
@@ -396,5 +396,23 @@
           \end{figure}
 
 \section{讨论}
+在人类肠道黏膜中定植了超过10万亿个微生物\cite{Ley2006}，并在方方面面影响人类的健康\cite{Sekirov2009}。肠道微环境紊乱可能扰乱人体稳态并导致各种疾病，包括肥胖\cite{Liu2017}），IBD\cite{Ley2006}，心血管疾病\cite{Wang2011}，以及精神障碍\cite{Rogers2016}等。虽然早期细菌定植对人类健康的长期影响仍然缺乏证据，但它仍然是新生儿出生后健康或某些疾病易感性的重要因素。到目前为止，少有研究关注NEC菌群的纵向发展，另外，对于新生儿晚期败血症（Late-Onset Sepsis，LOS）的菌群研究也十分有限。近期有研究发现NEC的致病菌与梭菌（\textit{Clostridium})增殖相关\cite{Hosny2017a}。然而，特定病原体尚未确定；2013年的一项研究表明，在生命的4-9天内早期的生态失调可能与NEC病理生理学密切相关\cite{Morrow2013}。因此，为在菌群层面提供对其病因学的新见解，本研究致力于探究肠道菌群定植的发展模式，而非寻找单一病原体。
+
+本研究描述并比较了NEC和LOS早产儿及其匹配对照组出生后肠道菌群的定植模式的发展。我们对192个肠道标本中的16S rRNA基因进行了测序：包括NEC早产儿的46个标本，LOS早产儿的42个标本，以及对照组的103个标本。使用Illumina-MiSeq平台为所有样品生成了总共7,472,400个序列，并检测出一些在自然环境下较为稀有的OTU。
+
+与一项早期研究相反，本研究显示早产儿在NEC发病期间存在丰富的变形菌；另外，数据显示，NEC患者中的厚壁菌门丰富（59.79\%），而对照组和LOS组则为变形菌。此外，NEC患者在发病前分别在1-3天和3-7天内肠球菌和葡萄球菌的平均丰度最高，相比对照组对照组相比增加了克雷伯氏菌和葡萄球菌的丰度也更高。这些发现表明潜在的致​​病性葡萄球菌属在NEC的发病机理中可能的作用以及常规致病物种如金黄色葡萄球菌（\textit{Staphylococcus areus}）和溶血性葡萄球菌（\textit{Staphylococcus haemolyticus}）。革兰氏阴性克雷伯氏菌丰度增加的趋势表明LPS的作用，作为TRL-4的配体其能促进体外Caco-2胞吞转运作用\cite{Panigrahi1996}，并增加细菌易位\cite{Deitch1987}。
+
+此外，LOS组中显着的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于我们对败血症进展的理解并帮助制定战略性预防性解决方案。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的败血症并发症和更高对死亡率相关\cite{Shimizu2011}。虽然我们相对较小的样本量仅显示特定菌属与败血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
+
+\cite{Dutta2014}以及与医院相关事件相关的异常早期定植，包括机械通气和抗生素治疗\cite{Moles2013}。另一项研究发现，早产儿肠道微生物群的定植和突然变化可能是分娩方式，喂养类型和孕龄的结果\cite{Dutta2014}。以往研究在早产儿中观察到从芽孢杆菌，$\gamma$芽孢杆菌到梭菌的一系列细菌\cite{LaRosa2014}）的先后主导作用在本研究内在包括LOS患者在内的大多数研究受试者中也观察到。本研究证实了出生后以周为时间单位的细菌定植模式，并发现每组肠道微生物群在不同组患儿间存在的显着差异。此外，本研究数据显示，在出生后第14天，NEC和对照组之间的肠道微生物群显着不同，尽管在出生后的前14天内具有相似的定植模式（图\ref{fig:2ingroupweek})，Anosim r = 0.32 p = 0.001），表明肠道微生态失调与NEC发病之间的强相关性。最后，肠道微生物群在出生后第21天至第28天的差异（图\ref{fig:2ingroupweek}，ANOSIM r = 0.27，p = 0.030）表明在NEC进展期间持续的生态失调，这与之前的横断面研究一致\cite{Wang2009}。
 
 \section{结论}
+多年来，临床医生和科研工作者在不断努力探究NEC和LOS与肠道菌群的相关性。虽然尚未阐明特定的病原体或微生物模式，但现有的研究结果有助于改善临床策略，并最大限度地减少早产儿的并发症。
+
+本研究使用高通量测序描述、比较和分析早产儿出生后肠道微生物群的动态模式在NEC和LOS早产儿中的作用的研究。我们的研究结果结果支持了“肠道生态失调假说”，即肠道微生物群的“异常动态定制模式”是早产儿NEC进展的触发因素。
+
+肠道菌群失调和潜在致病菌的过度增殖与NEC和LOS进展至关重要，抗生素（特别是氨基糖苷类抗生素），可以减少早产儿肠道微生物群落的丰度。
+
+本研究以及其他类似相关研究在肠道菌群动态变化和构成方面提供了早产儿NEC和LOS发生和发展的证据，从而帮助其早期预防、诊断和治疗，以降低其发病率和严重程度。
+
+然而，本研究有其局限性。首先，本研究中的所有婴儿均采用配方奶进行喂养，因此无法评估人类母乳的保护作用。此外，NEC和LOS组的样本量非常小。由于对所有患儿使用的经验性抗生素方案，因此难以规避抗生素对肠道微生物群的影响进而判断其影响程度。因此，本研究结果仍需要在更大样本量和更谨慎的方法的基础上，进行进一步研究中而得到证实。根据目前的研究结果，未来的研究应该包括更多的案例，以确定基于宏基因组测序的NEC和LOS的“高风险”的菌群模式。
