--- a/tex/id.tex
+++ b/tex/id.tex
@@ -11,7 +11,7 @@
 \institute{上海儿童医学中心}
 \studentnumber{116731910672}
 \major{儿科学}
-\keywords{肠道菌群，高通量测序, 坏死性小肠结肠炎，先天性巨结肠相关性小肠结肠炎，炎症性肠病}
+\keywords{肠道菌群，高通量测序, 坏死性小肠结肠炎，先天性巨结肠，迟发性败血症，先天性巨结肠相关性小肠结肠炎，炎症性肠病}
 
 \englishtitle{Pediatric Enterocolitis and Intestinal Microbiota}
 \englishauthor{\textsc{Jiayi Liu}}
@@ -23,4 +23,4 @@
   \textsc{Shanghai, P.R.China}}
 \englishmajor{Paediatrics}
 \englishdate{May, 2019}
-\englishkeywords{Intestinal Microbiota, High-throughput Sequencing, Necrotizing Enterocolitis, Hirshsprung-Associated Entrocolitis, Inflammatory Bowel Disease}
+\englishkeywords{Intestinal Microbiota, High-throughput Sequencing, Necrotizing Enterocolitis, Hirchsprung's Disease, Late-Onset Sepsis, Hirshsprung-Associated Entrocolitis, Inflammatory Bowel Disease}
