--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -11,16 +11,16 @@
     \begin{description}
       \item[目的] 探究早产儿出生后肠道菌群定植模式与坏死性小肠结肠炎(NEC)和迟发型败血症（LOS）的相关性。
       \item[方法] 入组24名早产新生儿，其中4名在住院后发展为NEC，3名为LOS，其余17名为对照组。从出生后的第一天开始收集粪便标本，纵向收集直至患儿出院，共收集192个粪便样本。扩增每个粪便样品的16s rRNA基因的细菌V3~V4区域并测序；后续分析包括：OTU聚类，各分类水平注释，多样性分析和多级物种判别分析。
-      \item[结果] 从出生后第14天开始，肠道微生物群定植模式开始在NEC，LOS及其匹配的对照组之间出现差异。迟发性脓毒症婴儿的肠道微生物群最少（Shannon指数= 1.66），对照组保持最多样化（Shannon指数= 0.88，p = 0.01）。潜在致病菌属肠球菌（20.86％）和葡萄球菌（8.67％）在NEC患者中显着，而在LOS组中克雷伯氏菌（42.15％）。两组均较对照组（3.66％）含有较少的乳球菌（NEC和LOS组分别为7.98％和13.76％）。
+      \item[结果] 从出生后第14天开始，肠道微生物群定植模式开始在NEC，LOS及其匹配的对照组之间出现差异。迟发性脓毒症婴儿的肠道微生物群最少（Shannon指数= 1.66），对照组保持最多样化（Shannon指数= 0.88，p = 0.01）。潜在致病菌属肠球菌（20.86％）和葡萄球菌（8.67％）在NEC患者中显着，而在LOS组中克雷伯氏菌（42.15％）。NEC和对照组均较LOS组（3.66％）含有更多的乳球菌（分别为7.98％和13.76％）。
       \item[结论] 肠道菌群定植失调与早产儿NEC和LOS发生和发展相关，尤其是潜在致病菌属，包括链球菌、葡萄球菌和克雷伯菌的相对丰度增加与上述疾病发展相关。
     \end{description}
 
   \textbf{儿科炎症性疾病与肠道菌群紊乱}
     \begin{description}
-      \item[目的] 详细内容
-      \item[方法] 详细内容
-      \item[结果] 详细内容
-      \item[结论] 详细内容 \ldots
+      \item[目的] To profile postpartum pattern progression of intestinal microbiome in these two diseases, with the aim of understanding their etiologic microbiota profiles from a dynamic perspective.
+      \item[方法] 24 preterm newborns were enrolled, among whom four subsequently developed NEC, three LOS, and the remaining 17 were healthy controls. Starting from the first stool after birth and continuing till discharge, 192 longitudinal fecal samples were prospectively collected from all patients. Bacterial V3~V4 region of 16s rDNA from each stool sample were amplified and sequenced.
+      \item[结果] The postpartum gut microbiota colonization started to diverge among NEC, LOS and their matched control groups, from the second week after birth.  Late-onset sepsis infants held the least diversified gut microbiota (Shannon index=1.66), with the control group held the most diversified one (Shannon index=0.88, p=0.01). Potentially pathogenic genus Enterococcus (20.86\%) and Staphylococcus (8.67\%) were prominent in NEC patients and Klebsiella (42.15\%) in LOS group. Both NEC and control groups addressed higher proportion of Lactococcus (7.98\% and 13.76\%, respectively) than the control group (3.66\%).
+      \item[结论] After-birth colonization pattern of gut microbiome might predispose preterm newborns to necrotizing enterocolitis or late-onset sepsis, in which reduced diversity of the whole microbiota community and potentially pathogenic genus could have played an essential role in disease progression. Still, more studies are needed to identify etiological strains, underlying mechanisms and correspondent microbial patterns. 
     \end{description}
 \end{abstract}
 
